添加日志排查识别二维码首页白屏

--- a/project.config.json
+++ b/project.config.json
@@ -6,7 +6,7 @@
   "appid": "wx3eab13f8a1a6114b",
   "setting": {
     "urlCheck": true,
-    "es6": false,
+    "es6": true,
     "enhance": false,
     "postcss": false,
     "preloadBackgroundData": false,
