添加log监控首页加载

--- a/project.config.json
+++ b/project.config.json
@@ -6,16 +6,16 @@
   "appid": "wx3eab13f8a1a6114b",
   "setting": {
     "urlCheck": true,
-    "es6": true,
+    "es6": false,
     "enhance": false,
     "postcss": false,
-    "preloadBackgroundData": false,
+    "preloadBackgroundData": true,
     "minified": false,
     "newFeature": false,
     "coverView": true,
     "nodeModules": false,
     "autoAudits": false,
-    "showShadowRootInWxmlPanel": true,
+    "showShadowRootInWxmlPanel": false,
     "scopeDataCheck": false,
     "uglifyFileName": false,
     "checkInvalidKey": true,
@@ -35,10 +35,11 @@
     "userConfirmedUseCompilerModuleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
-    "minifyWXSS": true
+    "minifyWXSS": false
   },
   "compileType": "miniprogram",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
+  "libVersion": "2.14.0",
   "condition": {}
 }
